修改了添加推荐时，取消选中推荐菜品后，翻页回来时，选中状态并没有被取消的bug

--- a/souceCode/RSS/src/main/resources/templates/console/activityManagement/activityManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/activityManagement/activityManagement.html
@@ -1272,7 +1272,7 @@
                         }
                     } else {
                         if(IDMapForRecommendAdd.get( $(IDList[x]).val() ) != undefined ){//从已选择中剔除
-                            IDMapForRecommendAdd.remove( $(IDList[x]).val() );
+                            IDMapForRecommendAdd.set( $(IDList[x]).val(), undefined );
                         }
                     }
                 }
