--- a/souceCode/RSS_Front/pages/index/index.wxml
+++ b/souceCode/RSS_Front/pages/index/index.wxml
@@ -6,7 +6,7 @@
     <scroll-view scroll-y="true" class="scroll_left">
       <block wx:for="{{classfiyList}}">
         <view data-num="{{index}}" bindtap='chooseMenuItem' class="nav_left_items {{choose_status==index ? 'item_choosed' : ' '}}" bindtap='chooseMenuItem'>
-          <text class="item_text" bindtap="getList" id="{{item.idenity_name}}">{{item.name}}</text>
+          <text class="item_text" bindtap="getList">{{item.name}}</text>
         </view>
       </block>
     </scroll-view>
@@ -16,10 +16,11 @@
     <view class="view_right {{choose_status == 0 ? '': 'hide'}}">
     
       <!--推荐页面中的滚动展示栏-->
-      <swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">    
+      <swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">
+      
         <block wx:for="{{recommend_circly}}" wx:for-index="index">    
           <swiper-item>    
-            <image src="{{item.pic_url}}" class="picture_index" mode="aspectFill"/>    
+            <image src="{{item.picUrl}}" class="picture_index" mode="aspectFill"/>    
           </swiper-item>    
         </block>  
       </swiper>
