--- a/souceCode/RSS_Front/pages/templates/menu/item_menu.wxss
+++ b/souceCode/RSS_Front/pages/templates/menu/item_menu.wxss
@@ -26,3 +26,15 @@
   display:flex;
   justify-content: space-between;
 }
+
+.box_horizontal{
+  display: flex;
+  flex-direction: column;
+}
+
+.box_vertical{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20rpx;
+}
