--- a/souceCode/RSS_Front/pages/cart/complaints/complaints.wxml
+++ b/souceCode/RSS_Front/pages/cart/complaints/complaints.wxml
@@ -7,13 +7,12 @@
           <van-card
           num="{{item.num}}"
           price="{{item.price}}"
-          desc="{{item.desc}}"
           title="{{item.name}}"
-          thumb="{{ item.pic_url }}"
+          thumb="{{ item.picUrl }}"
           >
             <view slot="footer" style='padding:10rpx'>
-              <van-button size="mini" round="true" style='margin-right:5rpx;'>-</van-button>
-              <van-button size="mini" round="true" style='margin-left:5rpx;'>+</van-button>
+              <van-button data-foodID="{{item.id}}" size="mini" round="true" style='margin-right:5rpx;'>-</van-button>
+              <van-button data-foodID="{{item.id}}" size="mini" round="true" style='margin-left:5rpx;'>+</van-button>
             </view>
 
           </van-card>
