完成了购物车中，结算金额的功能

--- a/souceCode/RSS_Front/pages/cart/cart.wxml
+++ b/souceCode/RSS_Front/pages/cart/cart.wxml
@@ -22,7 +22,7 @@
   </scroll-view>
 
   <van-submit-bar
-    price="{{ 3050 }}"
+    price="{{ food_accounts }}"
     button-text="提交订单"
     bind:submit="onSubmit"
   />
