--- a/souceCode/RSS_Front/pages/cart/cart.wxml
+++ b/souceCode/RSS_Front/pages/cart/cart.wxml
@@ -12,8 +12,8 @@
           thumb="{{ item.picUrl }}"
           >
             <view slot="footer" style='padding:10rpx'>
-              <van-button size="mini" round="true" style='margin-right:5rpx;'>-</van-button>
-              <van-button size="mini" round="true" style='margin-left:5rpx;'>+</van-button>
+              <van-button size="small" data-foodID="{{item.id}}" bindtap='removeOne' round="true" style='margin-right:5rpx;'>-</van-button>
+              <van-button size="small" data-foodID="{{item.id}}" bindtap='addOne' round="true" style='margin-left:5rpx;'>+</van-button>
             </view>
 
           </van-card>
