完成提交订单功能

--- a/souceCode/RSS_Front/pages/quickService/quickService.wxml
+++ b/souceCode/RSS_Front/pages/quickService/quickService.wxml
@@ -3,5 +3,4 @@
   <van-button type="info" size="large" class='button_quickService' bindtap='toCartPage'>快捷点餐</van-button>
   <van-button type="info" size="large" class='button_quickService'>呼叫服务员</van-button>
   <van-button type="info" size="large" class='button_quickService'>投诉</van-button>
-</view>,
-dd
+</view>
