--- a/souceCode/RSS_Front/pages/mine/order_record/order_record.wxss
+++ b/souceCode/RSS_Front/pages/mine/order_record/order_record.wxss
@@ -1,4 +1,17 @@
+@import "../../templates/item_mine_orderRecord/item_mine_orderRecord.wxss";
+
 .button_quickService{
   margin-bottom: 50rpx;
   width: 100%;
+}
+
+.container_{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.container_scroll{
+  width:95%;
 }
