--- a/souceCode/RSS_Front/pages/templates/item_mine_orderRecord/item_mine_orderRecord.wxml
+++ b/souceCode/RSS_Front/pages/templates/item_mine_orderRecord/item_mine_orderRecord.wxml
@@ -8,8 +8,8 @@
     <!-- 已点菜品的图片信息 -->
     <view class='details'>
       <scroll-view scroll-x style="white-space:nowrap">
-        <block wx:for="{{foodList}}" wx:for-item="picItem" wx:ket="picURL">
-          <image src="{{picItem.picURL}}" class='details_picture'  mode="aspectFill" ></image>
+        <block wx:for="{{picURL_foods}}" wx:for-item="picItem" wx:ket="picURL">
+          <image src="{{picItem}}" class='details_picture'  mode="aspectFill" ></image>
         </block>
 
         <view  style="display:inline-block;margin-right:20rpx">
@@ -21,7 +21,7 @@
 
     <!-- 订单信息(日期，优惠， 实付) -->
     <view class='orderInfo'>
-      <text style='font-size:12px'>消费日期: {{date}}</text>
+      <text style='font-size:12px'>消费日期: {{createDate}}</text>
       <text style='font-size:12px'>实付: {{account_final}}￥</text>
     </view>
 
