前端 客户端 完成服务员端改变工作状态；提交完成分配任务的功能

--- a/souceCode/RSS_Front/pages/templates/item_waiter_message/item_waiter_message.wxml
+++ b/souceCode/RSS_Front/pages/templates/item_waiter_message/item_waiter_message.wxml
@@ -13,7 +13,7 @@
         <text class='tableNum'> 桌号: {{item.tableNum}} </text>
       </view>
       <view class='acceptContainer'>
-        <button>接单</button>
+        <button data-recordID='{{item.id}}' bindtap='completeMission'>接单</button>
       </view>
     </view>
 
